fix dark mode

--- a/src/assets/sass/_app.scss
+++ b/src/assets/sass/_app.scss
@@ -31,3 +31,7 @@ body{
 a{
  text-decoration: none;
 }
+
+button{
+  cursor: pointer;
+}
